GDI mouse render

--- a/project/msvc/BoxedWine/uwp/uwp.vcxproj
+++ b/project/msvc/BoxedWine/uwp/uwp.vcxproj
@@ -307,6 +307,9 @@
       <Link>%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="$(SolutionDir)/deps/pointer_arrow.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <!-- Redist provided by ms / required by mesa gallium -->
   <ItemGroup>
